# vault-pydantic-simple

./: .gitignore  .gitlab-ci.yml  README.md  pyproject.toml
.github/workflows/: main.yml
vlt/: __init__.py  config.py  constants.py  json_source.py  vault_source.py
