[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vault-pydantic-simple"
version = "0.5.0"
description = "Library to fetch configuration from Vault KV and JSON using pydantic"
readme = "README.md"
classifiers = [
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13"
]

requires-python = ">=3.11"
dependencies = [
    "hvac>=2.3.0",
    "loguru>=0.7.3",
    "pydantic>=2.10.6",
    "pydantic-settings>=2.7.1",
]

[[project.authors]]
name = "tofuurem"
email = "rabbit_1399@icloud.com"

[project.license]
text = "MIT"

[dependency-groups]
dev = [
    "isort>=6.0.0",
    "mypy>=1.14.1",
    "ruff>=0.9.4",
]
